x86 short forward jump exceeds 8-bit offset in methodHandles_x86.cpp when using Intel APX

XMLWordPrintable

    • b11
    • x86

        Running the HotSpot jtreg test test/hotspot/jtreg/compiler/c2/TestLWLockingCodeGen.java on x86_64 SDE emulator with Intel APX enabled triggers an assertion failure in methodHandles_x86.cpp.

        The failure occurs because the assembler emits a short forward jump (imm8 displacement) whose target is more than 127 bytes away, exceeding the allowed range. This appears to be caused by larger stub code size when APX instruction encoding is enabled.

        Error Message: # Internal Error (src/hotspot/cpu/x86/methodHandles_x86.cpp:140)
        # guarantee(this->is8bit(imm8)) failed: Short forward jump exceeds 8-bit offset

              Assignee:
              Srinivas Parasa
              Reporter:
              Srinivas Parasa
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: