8365265: x86 short forward jump exceeds 8-bit offset in methodHandles_x86.cpp when using Intel APX